Let the tests read logback core